# agentic-cli

./: .gitignore  README.md  pyproject.toml
.2giants/: sessions.db  sessions.db-shm  sessions.db-wal
src/cli/: main.py
src/core/: config.py  session.py  state.py
src/graphs/: executor.py  main.py  planner.py  researcher.py
src/tools/: filesystem.py  search.py  subprocess.py
